src/app.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');

* {
	box-sizing: border-box;
}

[data-theme='dark']:root {
	--text1: #e1e1e1;
	--text2: #e3e3e3;
	--background: #121212;
	--overlay1: #1e1e1e;
	--box-shadow: #0f0f0f;
	color-scheme: dark;
}

:root {
	--text1: #212529;
	--text2: #666;
	--background: #e9e9e9;
	--overlay1: #fcfcfc;
	--box-shadow: #bbb;
	color-scheme: light;
	scroll-behavior: smooth;
}

::selection {
	background: #ff8f8f;
	color: #212529;
}

h1,
h2,
h3,
h4,
h5 {
	color: var(--text1);
}

body {
	font-family: 'Montserrat', sans-serif;
	background-color: var(--background);
	background-image: url('/background-light.svg');
	color: var(--text2);
}

[data-theme='dark'] body {
 background-image: url('/background.svg');
}

img {
	max-width: 100%;
	object-fit: contain;
	border-radius: 0.5em;
}

.container {
	width: 1200px;
	max-width: 100%;
	margin: 0 auto;
	padding: 0 0.75rem;
}

@media screen and (max-width: 1199px) {
	.container {
		width: 960px;
	}
}

